Testing with HuggingFace models

--- a/notebooks/SKLearnTest.ipynb
+++ b/notebooks/SKLearnTest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -25,23 +25,23 @@
       "Name: count, Length: 191, dtype: int64\n",
       "New Sentiment Distribution:\n",
       " Sentiment\n",
-      "positive    135\n",
-      "negative     29\n",
-      "neutral       9\n",
+      "positive    180\n",
+      "negative     33\n",
+      "neutral      27\n",
       "Name: count, dtype: int64\n",
-      "Accuracy: 0.4000\n",
+      "Accuracy: 0.4375\n",
       "Classification Report:\n",
       "               precision    recall  f1-score   support\n",
       "\n",
-      "    negative       0.75      1.00      0.86         3\n",
-      "     neutral       0.17      1.00      0.29         4\n",
-      "    positive       1.00      0.25      0.40        28\n",
+      "    negative       0.50      0.67      0.57         6\n",
+      "     neutral       0.29      0.90      0.44        10\n",
+      "    positive       0.89      0.25      0.39        32\n",
       "\n",
-      "    accuracy                           0.40        35\n",
-      "   macro avg       0.64      0.75      0.51        35\n",
-      "weighted avg       0.88      0.40      0.43        35\n",
+      "    accuracy                           0.44        48\n",
+      "   macro avg       0.56      0.61      0.47        48\n",
+      "weighted avg       0.72      0.44      0.42        48\n",
       "\n",
-      "Predictions: ['positive' 'negative' 'positive']\n"
+      "Predictions: ['neutral' 'neutral' 'positive']\n"
      ]
     }
    ],
@@ -76,13 +76,13 @@
     "    \"celestial wonder\": \"positive\", \"nature's beauty\": \"positive\", \"thrilling journey\": \"positive\",\n",
     "    \n",
     "    # Neutral Sentiments\n",
-    "    \"acceptance\": \"neutral\", \"calm\": \"neutral\", \"whispers of the past\": \"neutral\",\n",
+    "    \"acceptance\": \"neutral\", \"calm\": \"neutral\", \"whispers of the past\": \"neutral\", \"neutral\":\"neutral\",\n",
     "\n",
     "    # Negative Sentiments\n",
     "    \"anger\": \"negative\", \"fear\": \"negative\", \"sadness\": \"negative\",\n",
     "    \"disgust\": \"negative\", \"disappointment\": \"negative\", \"guilt\": \"negative\",\n",
     "    \"shame\": \"negative\", \"frustration\": \"negative\", \"anxiety\": \"negative\",\n",
-    "    \"betrayal\": \"negative\"\n",
+    "    \"betrayal\": \"negative\",\n",
     "}\n",
     "\n",
     "# Map sentiments to broader categories\n",
