fix the fine tune yelp part

--- a/notebooks/FineTuneTest.ipynb
+++ b/notebooks/FineTuneTest.ipynb
@@ -11,18 +11,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This cell tests fine-tuning the Twitter Roberta Base Sentiment Model (https://huggingface.co/cardiffnlp/twitter-roberta-base-sentiment):"
+    "This cell tests fine-tuning the Twitter Roberta Base Sentiment Model (https://huggingface.co/cardiffnlp/twitter-roberta-base-sentiment). It fine tunes with the kaggle social media analysis dataset (https://www.kaggle.com/datasets/kashishparmar02/social-media-sentiments-analysis-dataset)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "40ccab67d83846a4babed9f341eb83c4",
+       "model_id": "61da74b5801f406b9dcec83663688a78",
        "version_major": 2,
        "version_minor": 0
       },
@@ -36,7 +36,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "24d49048271c4ab0a12211e99143fe54",
+       "model_id": "825ff14c2a2c4c3e99899044ab13aa3f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -50,7 +50,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e07f6b6073234dc5b97fd5e3377b8367",
+       "model_id": "64656d2d6d894fdc9f0da6affc254395",
        "version_major": 2,
        "version_minor": 0
       },
@@ -64,7 +64,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4f626fd57d414bd6813c03b9852a07ad",
+       "model_id": "c8a9573cae5c4cac880369c7fdc9932d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -78,7 +78,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "007cd645681e403cbdcf481e54382568",
+       "model_id": "115075f21e4546b7ab647e01878141c6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -92,7 +92,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e3aaf9d5788f40b6a07c98f8e601081b",
+       "model_id": "6ac0e669b0f242259bf09c49032e8f4e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -102,100 +102,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\rossk\\Desktop\\WSU\\WSU Semester 4\\CPTS 440\\CptS440_AIproject\\venv\\Lib\\site-packages\\transformers\\training_args.py:1594: FutureWarning: `evaluation_strategy` is deprecated and will be removed in version 4.46 of 🤗 Transformers. Use `eval_strategy` instead\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "    <div>\n",
-       "      \n",
-       "      <progress value='15' max='15' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [15/15 01:57, Epoch 3/3]\n",
-       "    </div>\n",
-       "    <table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       " <tr style=\"text-align: left;\">\n",
-       "      <th>Epoch</th>\n",
-       "      <th>Training Loss</th>\n",
-       "      <th>Validation Loss</th>\n",
-       "      <th>Accuracy</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>No log</td>\n",
-       "      <td>0.241960</td>\n",
-       "      <td>0.940299</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>No log</td>\n",
-       "      <td>0.111401</td>\n",
-       "      <td>0.970149</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>No log</td>\n",
-       "      <td>0.083784</td>\n",
-       "      <td>0.985075</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table><p>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "    <div>\n",
-       "      \n",
-       "      <progress value='5' max='5' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [5/5 00:04]\n",
-       "    </div>\n",
-       "    "
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fine-tuning complete and model saved!\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Device set to use cpu\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Test: [{'label': 'LABEL_2', 'score': 0.9943801760673523}]\n"
-     ]
     }
    ],
    "source": [
@@ -303,29 +209,218 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This cell tests on the Multilingual Uncased Sentiment Model (good for Yelp) (https://huggingface.co/nlptown/bert-base-multilingual-uncased-sentiment):"
+    "This cell tests on the Multilingual Uncased Sentiment Model (good for Yelp) (https://huggingface.co/nlptown/bert-base-multilingual-uncased-sentiment). It fine-tunes on the Yelp Business dataset (https://business.yelp.com/data/resources/open-dataset/)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "786d03408c1c49e2ad112a3e57c3a6af",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Filter:   0%|          | 0/100 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "cbc67d4b517242d1b37710685d9934c4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Filter:   0%|          | 0/50 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b0f2db2907a74ba383c7808a477218f8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/100 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5a299d8e40f54af7862e02c9c6bada21",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/50 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0027d257276d4fdeb0f86a35d0f996bc",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/100 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "52c28470abf84713a3b183428762d31f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/50 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\rossk\\Desktop\\WSU\\WSU Semester 4\\CPTS 440\\CptS440_AIproject\\venv\\Lib\\site-packages\\transformers\\training_args.py:1594: FutureWarning: `evaluation_strategy` is deprecated and will be removed in version 4.46 of 🤗 Transformers. Use `eval_strategy` instead\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div>\n",
+       "      \n",
+       "      <progress value='21' max='21' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [21/21 04:00, Epoch 3/3]\n",
+       "    </div>\n",
+       "    <table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       " <tr style=\"text-align: left;\">\n",
+       "      <th>Epoch</th>\n",
+       "      <th>Training Loss</th>\n",
+       "      <th>Validation Loss</th>\n",
+       "      <th>Accuracy</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>No log</td>\n",
+       "      <td>0.429813</td>\n",
+       "      <td>0.940000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>No log</td>\n",
+       "      <td>0.188837</td>\n",
+       "      <td>0.960000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>No log</td>\n",
+       "      <td>0.117968</td>\n",
+       "      <td>0.960000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table><p>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div>\n",
+       "      \n",
+       "      <progress value='4' max='4' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [4/4 00:03]\n",
+       "    </div>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fine-tuning complete and model saved!\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Device set to use cpu\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Case 1: The food was fantastic, but the service was slow. Classification: [{'label': '4 stars', 'score': 0.7007597088813782}]\n",
+      "Test Case 2: Absolutely awful. Never coming back. Classification: [{'label': '1 star', 'score': 0.9797160625457764}]\n",
+      "Test Case 3: Great food, great service. Highly recommend! Classification: [{'label': '5 stars', 'score': 0.9886147975921631}]\n"
+     ]
+    }
+   ],
    "source": [
+    "# Import necessary libraries\n",
     "from transformers import AutoTokenizer, AutoModelForSequenceClassification, Trainer, TrainingArguments, pipeline\n",
     "from datasets import Dataset\n",
     "from evaluate import load\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import json\n",
     "\n",
-    "# 1. Load Dataset\n",
-    "def load_dataset_from_csv(file_path):\n",
-    "    df = pd.read_csv(file_path)\n",
+    "# 1. Load Dataset from JSON with limit\n",
+    "def load_dataset_from_json(file_path, limit):  # Limit to 10,000 reviews by default\n",
+    "    data = []\n",
+    "    with open(file_path, \"r\", encoding=\"utf-8\") as f:\n",
+    "        for i, line in enumerate(f):\n",
+    "            if i >= limit:\n",
+    "                break\n",
+    "            data.append(json.loads(line))\n",
+    "    df = pd.DataFrame(data)\n",
     "    return Dataset.from_pandas(df)\n",
     "\n",
-    "# Adjust paths to the Yelp dataset\n",
-    "train_dataset = load_dataset_from_csv(\"../data/YelpReviewsDataset.csv\")\n",
-    "test_dataset = load_dataset_from_csv(\"../data/YelpReviewsDataset.csv\")\n",
+    "# Adjust paths and set limit (e.g., 10,000 reviews)\n",
+    "train_dataset = load_dataset_from_json(\"../data/yelp_dataset/yelp_academic_dataset_review.json\", limit=100)\n",
+    "test_dataset = load_dataset_from_json(\"../data/yelp_dataset/yelp_academic_dataset_review.json\", limit=50)\n",
     "\n",
     "# 2. Load Tokenizer and Model\n",
     "MODEL = \"nlptown/bert-base-multilingual-uncased-sentiment\"\n",
@@ -335,28 +430,28 @@
     "# 3. Map Sentiment Labels to Integers (1 to 5 stars)\n",
     "def map_labels(example):\n",
     "    try:\n",
-    "        example[\"labels\"] = int(example[\"Sentiment\"])\n",
+    "        example[\"labels\"] = int(example[\"stars\"]) - 1  # Labels go from 0 to 4 (for 5 stars)\n",
     "        return example\n",
     "    except ValueError:\n",
     "        return None  # Ignore invalid labels\n",
     "\n",
     "# Apply mapping and filter out invalid labels\n",
-    "train_dataset = train_dataset.filter(lambda example: str(example[\"Sentiment\"]).isdigit())\n",
-    "test_dataset = test_dataset.filter(lambda example: str(example[\"Sentiment\"]).isdigit())\n",
+    "train_dataset = train_dataset.filter(lambda example: \"stars\" in example and isinstance(example[\"stars\"], (int, float)))\n",
+    "test_dataset = test_dataset.filter(lambda example: \"stars\" in example and isinstance(example[\"stars\"], (int, float)))\n",
     "\n",
     "train_dataset = train_dataset.map(map_labels)\n",
     "test_dataset = test_dataset.map(map_labels)\n",
     "\n",
     "# 4. Tokenize Dataset\n",
     "def tokenize_function(example):\n",
-    "    return tokenizer(example[\"Text\"], truncation=True, padding=\"max_length\", max_length=128)\n",
+    "    return tokenizer(example[\"text\"], truncation=True, padding=\"max_length\", max_length=128)\n",
     "\n",
     "train_dataset = train_dataset.map(tokenize_function, batched=True)\n",
     "test_dataset = test_dataset.map(tokenize_function, batched=True)\n",
     "\n",
-    "# Remove original text column (Hugging Face Trainer needs tensors only)\n",
-    "train_dataset = train_dataset.remove_columns([\"Text\"])\n",
-    "test_dataset = test_dataset.remove_columns([\"Text\"])\n",
+    "# Remove original text and stars columns (Hugging Face Trainer needs tensors only)\n",
+    "train_dataset = train_dataset.remove_columns([\"text\", \"stars\"])\n",
+    "test_dataset = test_dataset.remove_columns([\"text\", \"stars\"])\n",
     "\n",
     "# 5. Set Up Trainer and Training Arguments\n",
     "training_args = TrainingArguments(\n",
